--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             let annee = maintenant.getFullYear();
                         
                             // Tableau contenant les noms des mois en français
-                            let moisEnLettre = ['janvier', 'février', 'mars', 'avril', 'mai', 'juin', 'juillet', 'août', 'septembre', 'octobre', 'novembre', 'décembre'];
+                            let moisEnLettre = ['Janvier', 'Février', 'Mars', 'Avril', 'Mai', 'Juin', 'Juillet', 'Août', 'Septembre', 'Octobre', 'Novembre', 'Décembre'];
                         
                             // Formatage de la date
                             let dateFormatted = jour + ' ' + moisEnLettre[mois] + ' ' + annee;
